ValidatedPrism: located element nulls and index-located container failures (#660) (#662)
* ValidatedPrism: located element nulls and index-located failures (#660)

The null doctrine reaches inside containers, completing #653/#659:
parseAll locates every failing element by its index — a plain positional
segment (emails.1), matching parseValues' key grammar and the locked
flat-segment model (bracket rendering stays deferred to the PathSegment
draft) — and a null element or map value is a located, accumulating
'must not be null' at its index or key instead of an NPE. A null list,
map or map key stays the caller's requireNonNull (a null key is a
structurally broken map, not a wrong value); buildAll/buildValues stay
total-and-throwing.